--- a/src/main/resources/support/http/resource/header.html
+++ b/src/main/resources/support/http/resource/header.html
@@ -4,16 +4,11 @@
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <a href="https://github.com/alibaba/druid/wiki" target="_blank" class="brand lang" langKey="">Sedis Monitor</a>
+            <a href="https://github.com/yollock/sedis/blob/master/handbook/cache.md" target="_blank" class="brand lang" langKey="">Sedis Monitor</a>
             <div class="nav-collapse">
                 <ul class="nav">
                     <li><a href="index.html" class="lang" langKey="Index">Index</a></li>
                     <li><a href="cacheAttribute.html" class="lang" langKey="cacheAttribute">cacheAttribute</a></li>
-                    <li><a href="webapp.html" class="lang" langKey="WebApp">WebApp</a></li>
-                    <li><a href="weburi.html" class="lang" langKey="WebURI">WebURI</a></li>
-                    <li><a href="websession.html" class="lang" langKey="Web Session">Web Session</a></li>
-                    <li><a href="spring.html" class="lang" langKey="Spring">Spring</a></li>
-                    <li><a href="api.html" class="lang" langKey="JSON API">JSON API</a></li>
                 </ul>
                 <a langKey="ResetAll" class="btn btn-primary lang" href="javascript:cache.common.ajaxRequestForReset();">Reset All</a>
                 <a langKey="LogAndReset" class="btn btn-primary lang" href="javascript:cache.common.ajaxRequestForLogAndReset();">Log And Reset</a>
