添加destroy接口, 避免内存泄漏 优化部分命名

--- a/src/main/resources/support/http/resource/cacheAttribute.html
+++ b/src/main/resources/support/http/resource/cacheAttribute.html
@@ -17,8 +17,7 @@
     <div class="row-fluid">
         <div class="span12">
             <h3>
-                Web URI Stat
-                <a href="cacheAttribute.json" target="_blank">View JSON API</a>
+                CacheAttribute
                 <span class="pull-right" style="font-size: 16px; margin-right: 20px;">
                     <label langkey="RefreshPeriod" class="lang" style="display: inline;" for="refreshSecondsSelect">Refresh Period</label>
                     <select id="refreshSecondsSelect" class="refresh-seconds-select btn" style="width:80px;" onchange="javascript:cache.cacheAttribute.refreshSeconds=parseInt(this.options[this.options.selectedIndex].value);">
